--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,6 +16,9 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  background-color: rgba(0, 31, 9, 0.5);
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .account-container {
@@ -62,7 +65,7 @@
 }
 
 .token-container {
-  background-color: rgba(10, 15, 45, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   border-radius: 5px;
   display: flex;
   padding: 5px;
@@ -73,6 +76,8 @@
   height: auto;
   padding: 10px;
 }
+
+
 
 .image-text-field {
   padding-top: 2rem;
@@ -100,9 +105,18 @@
   background-color: rgba(1, 50, 16, 0.8);
 }
 
+.main-content-section-2 {
+  background-color: rgba(0, 31, 9, 0.5);
+  border-radius: 10px;
+}
+
+.section-2-title {
+  padding-top: 50px;
+}
+
 .output-section {
   padding-top: 20px;
-  background-color: rgb(31, 31, 31);
+  background-color: rgba(0, 31, 9, 0.5);
   border-radius: 5px;
   height: 23rem;
   overflow-y: auto;
@@ -148,6 +162,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  background-color: rgba(0, 31, 9, 0.5);
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .logging {
