--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,7 @@
 .main-content-section-1 {
   display: flex;
   gap: 10px;
+  padding: 10px;
 }
 
 .account-section {
@@ -20,6 +21,12 @@
   border-radius: 10px;
   padding: 10px;
 }
+
+.table, th, td {
+  background-color: rgba(13, 13, 13, 0.5);
+  border: 1px solid #ccc;
+}
+
 
 .account-container {
   background-color: rgba(13, 13, 13, 0.5);
@@ -105,9 +112,19 @@
   background-color: rgba(1, 50, 16, 0.8);
 }
 
+.main-content-section-3 {
+  background-color: rgba(0, 31, 9, 0.5);
+  border-radius: 10px;
+}
+
 .main-content-section-2 {
   background-color: rgba(0, 31, 9, 0.5);
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
 }
 
 .section-2-title {
