--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,6 +60,20 @@
   border-radius: 5px;
 }
 
+.submit-data {
+  background-color: rgb(0, 34, 255);
+  border: none;
+  color: white;
+  text-align: center;
+  width: 10rem;
+  height: 3rem;
+  border-radius: 5px;
+}
+
+.submit-data:hover {
+  background-color: rgb(68, 92, 247);
+}
+
 .input-text-field {
   width: 15rem;
   border: none;
